--- a/serverapi/forum/src/app/topicdetail/topicdetail.component.html
+++ b/serverapi/forum/src/app/topicdetail/topicdetail.component.html
@@ -2,9 +2,9 @@
 <table class="table table-responsive table-striped">
       <thead>
         <tr>
-          <th> Posts</th>
-          <th> Username</th>
-          <th> Options </th>
+         <th class="col-xs-7"> {{'POSTS'| translate}}</th>
+          <th class="col-xs-3"> {{'USERNAME'| translate}}</th>
+          <th class="col-xs-2"> {{'OPTIONS'| translate}} </th>
         </tr>
       </thead>
       <tbody>
