--- a/serverapi/forum/src/app/app.component.html
+++ b/serverapi/forum/src/app/app.component.html
@@ -10,17 +10,24 @@
       </button>
         </div>
         <div class="collapse navbar-collapse" [ngClass]="{ 'in': isIn }">
-            <form class="navbar-form navbar-left">
-                <button type="button" class="btn btn-primary navbar-btn btn-sm" (click)="goBack()"> Back </button>
-            </form>
+            <form class="navbar-form">
+                <button type="button" class="btn btn-primary navbar-btn navbar-left" (click)="goBack()"> {{'BACK'|translate}} </button>
             <ul class="nav navbar-nav" >
-           <li> <a  routerLink="/user">User</a></li>
-           <li> <a  routerLink="/posts">Posts</a></li>
-           <li> <a  routerLink="/topics">Topics</a></li>
-           <li> <a  routerLink="/login">Login</a> </li>
+           <li> <a  routerLink="/user">{{'USER' | translate}}</a></li>
+           <li> <a  routerLink="/posts">{{'POSTS'| translate}}</a></li>
+           <li> <a  routerLink="/topics">{{'TOPICS' | translate}}</a></li>
+           <li> <a  routerLink="/login">{{'LOGIN' | translate}}</a> </li>
             </ul>
-            <form class="navbar-form navbar-right">
-                <button type="button" class="btn btn-primary navbar-btn btn-sm" (click)="logout()">Logout</button>
+            
+            <div class="navbar-right">
+           
+            <select #langSelect (change)="translate.use(langSelect.value)" class="selectpicker form-control ">
+                <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang }}</option>
+            </select>
+            
+                <button type="button" class="btn btn-primary navbar-btn " (click)="logout()">{{'LOGOUT' | translate}}</button>
+            
+            </div>
             </form>
         </div>
     </div>
