--- a/serverapi/forum/src/app/posts/posts.component.html
+++ b/serverapi/forum/src/app/posts/posts.component.html
@@ -2,9 +2,9 @@
  <table class="table table-responsive table-striped">
       <thead>
         <tr>
-          <th> Posts</th>
-          <th> Username</th>
-          <th> Options </th>
+         <th class="col-xs-7"> {{'POSTS'| translate}}</th>
+          <th class="col-xs-3"> {{'USERNAME'| translate}}</th>
+          <th class="col-xs-2"> {{'OPTIONS'| translate}} </th>
         </tr>
       </thead>
       <tbody>
@@ -27,12 +27,12 @@
  <!--   <pagination-controls (pageChange)="page = $event" id ="1"></pagination-controls>-->
 
 <div *ngIf="loggedIn === true">
-  <label> new Title: <input #title  /> </label>
-  <label> new topics: <input #topics  /> </label>
+  <label> {{'NEWTITLE'| translate}}: <input #title  /> </label>
+  <label> {{'NEWTOPIC'| translate}}: <input #topics  /> </label>
   
-  <button class="btn btn-info" (click)="addPost(title.value, topics.value); topics.value=''; title.value=''">Add</button>
+  <button class="btn btn-info" (click)="addPost(title.value, topics.value); topics.value=''; title.value=''">{{'ADD'| translate}}</button>
 </div>
 <div *ngIf="loggedIn === false">
-  <h3>Bitte einloggen um Posts zu lesen oder anzulegen </h3>
+  <h3>{{'LOGINMESSAGE'| translate}} </h3>
 </div>
 </div>
