--- a/serverapi/forum/src/app/topics/topics.component.html
+++ b/serverapi/forum/src/app/topics/topics.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2> Topics </h2>
+  <h2> {{'TOPICS'| translate}} </h2>
   <ul class="list-group">
   <li class="list-group-item"  *ngFor="let topic of topics" [class.selected]="isSelected(topic)" (click)="onSelect(topic)">
     {{topic}}
