--- a/serverapi/forum/src/app/edituser/edituser.component.html
+++ b/serverapi/forum/src/app/edituser/edituser.component.html
@@ -2,26 +2,60 @@
 <div  *ngFor="let user of user">
   <div *ngIf="decoded.isAdmin === true || decoded.id === user._id">
   <div class="form-group">
-    <form  class="form-inline">
-  <label> {{'USERNAME'| translate}}: <input #name [(ngModel)]="user.name" class="form-control" name="namen" /></label>
-    </form>
-  <form *ngIf="decoded.id === user._id" class="form-inline">
-  <label> {{'PASSWORD'| translate}}: <input #password [(ngModel)]="user.password" class="form-control" type="password" name="passwordn"/></label>
+  <label> {{'USERNAME'| translate}}:</label>
+  <input #name [(ngModel)]="user.name" class="form-control" name="namen" disabled/>
+  <form *ngIf="decoded.id === user._id" >
+  <label> {{'PASSWORD'| translate}}: </label>
+  <input #password [(ngModel)]="user.password" class="form-control" type="password" name="passwordn"/>
+  <label> {{'FIRSTNAME'| translate}}</label>
+  <input #firstname [(ngModel)]="user.firstname" class="form-control" name="firstname"/>
+  <label> {{'LASTNAME'| translate}}</label>
+  <input #lastname [(ngModel)]="user.lastname" class="form-control" name="lastname"/>
+  <label> {{'BIRTHDAY'| translate}}</label>
+  <div class="input-group">
+  <input #birthday [(ngModel)]="user.birthday" class="form-control" name="birthday"/>
+  <span class="input-group-btn">
+     <button class="btn btn-primary" type="button" (click)="showcal()">
+       <span class="glyphicon glyphicon-calendar"></span>
+     </button>
+   </span>
+   </div>
+   <div *ngIf="calendar === true">
+     <datepicker [(ngModel)]="user.birthday"  [showWeeks]="true" name="calendar"></datepicker> 
+   </div>
+    <div class="row ">
+    <div class="col-sm-10 form-group">  
+   <label> {{'STREET'| translate}}</label>
+   <input #street [(ngModel)]="user.adress.street" class="form-control" name="street"/>
+   </div>
+    <div class="col-sm-2 form-group">
+   <label> {{'NUMBER'| translate}}</label>
+   <input #number [(ngModel)]="user.adress.number" class="form-control" name="number"/>
+   {{street.value}}
+    </div>
+  </div>
+  <div class="row ">
+    <div class="col-sm-10 form-group">
+   <label> {{'TOWN'| translate}}</label>
+   <input #town [(ngModel)]="user.adress.town" class="form-control" name="town"/>
+    </div>
+    <div class="col-sm-2 form-group">
+   <label> {{'ZIP'| translate}}</label>
+   <input #zip [(ngModel)]="user.adress.ZIP" class="form-control" name="ZIP"/>
+    </div>
+  </div>
+   <label> {{'COUNTRY'| translate}}</label>
+   <input #country [(ngModel)]="user.adress.country" class="form-control" name="country"/>
   </form>
-  <form class="form-inline" *ngIf="decoded.isAdmin === true">
-  
-  <label> {{'ADMIN'| translate}}: <input #isAdmin type="checkbox" class="form-control" [(ngModel)]="user.isAdmin"  name="isAdminn"/></label>
-  
+  <form *ngIf="decoded.isAdmin === true">
+  <label> {{'ADMIN'| translate}}: </label>
+  <br>
+  <input #isAdmin type="checkbox" [(ngModel)]="user.isAdmin"  name="isAdminn"/>
   </form>
   </div>
   <input #id hidden [(ngModel)]="user._id" name="idn"/>
-  
-  
-  
-   <button class="btn btn-info" (click)="editUser(user.name, user.password,user.isAdmin,user._id)">{{'EDIT'| translate}}</button>
-
+  <button class="btn btn-info" (click)="editUser(user.name, user.password,user.isAdmin,user._id, user.firstname,user.lastname
+  ,user.birthday,user.adress.street,user.adress.number,user.adress.town,user.adress.ZIP,user.adress.country)">{{'EDIT'| translate}}</button>
 </div>
 </div>
 </div>
-
- 
