--- a/serverapi/forum/src/app/topics/topics.component.css
+++ b/serverapi/forum/src/app/topics/topics.component.css
@@ -1,3 +1,15 @@
 li:hover {
     cursor: pointer
+};
+li {
+    width: 200px;
+    background: orange;
+    margin: 5px;
+    padding: 15px;
+};
+.brick {
+    width: 200px;
+    background: orange;
+    margin: 5px;
+    padding: 15px;
 }
