--- a/serverapi/forum/src/app/postdetail/postdetail.component.html
+++ b/serverapi/forum/src/app/postdetail/postdetail.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngIf="post">
-    <h2>{{post.title}}</h2>
+    <h2>{{post.title}}</h2>{{post.created}}
     <p>{{'CREATEFROM'| translate}}: {{post.Username}}</p>
   <input hidden [value]="post_id" #id/>
     <div class="panel-group">
