--- a/serverapi/forum/src/app/posts/posts.component.html
+++ b/serverapi/forum/src/app/posts/posts.component.html
@@ -8,7 +8,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr  *ngFor="let post of posts"  [class.selected]="isSelected(post)" (click)="onSelect(post)" >
+        <tr  *ngFor="let post of posts | orderBy: 'created' : reverse"  [class.selected]="isSelected(post)" (click)="onSelect(post)" >
           <td>{{post.title}}</td>
           <td>{{post.Username}}</td>
           <td>
