--- a/test/css/styles2.css
+++ b/test/css/styles2.css
@@ -1,39 +1,112 @@
-#header {
-  color: #777777;
+
+.mytext{
+    border:0;padding:10px;background:whitesmoke;
 }
-h1 {
-  color: green;
-  margin-top: 50px;
+.text{
+    display:flex;flex-direction:column;
 }
- 
+.text > p:first-of-type{
+    margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
+}
+.text > p:last-of-type{
+    text-align:right;color:black;margin-bottom:-7px;margin-top:auto;
+}
+.text-l{
+    float:left;padding-right:10px;
+}        
+.text-r{
+    float:right;padding-left:10px;color: white
+}
+
+.macro{
+    margin-top:5px;border-radius:5px;padding:5px;display:flex;
+}
+.msj-rta{
+    float:right;background:blue
+}
+.msj{
+    float:left;background:lightgrey;
+}
+.frame{
+    
+    height:90%;
+    overflow:hidden;
+    padding:0;
+}
+.frame > div:last-of-type{
+    position:absolute;bottom:5px;width:100%;display:flex;
+}
 ul {
-  overflow: hidden;
-  background-color: #000000;
-  margin: 0;
-  padding: 0;
-  position: fixed;
-  width: 100%;
+    width:100%;
+    list-style-type: none;   
+    bottom:32px;
+    display:flex;
+    flex-direction: column;
+    -webkit-padding-start: 0;
+}
+  
+.container{
+    margin-left: auto;
+margin-right: auto;
+height: 500px;
+width: 90%;
+border: 1px solid rgb(43, 113, 177);
+max-height: 80%;
+overflow: auto;
+overflow-x: hidden;
+
+}
+.saving {
+  font-size: 40px;
+  color: black
 }
 
-ul.topnav {
-  top: 0;
+.saving span {
+  font-size: 50px;
+  -webkit-animation-name: blink;
+          animation-name: blink;
+  -webkit-animation-duration: 1.4s;
+          animation-duration: 1.4s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
 }
 
-ul.bottom {
-  bottom: 0;
+.saving span:nth-child(2) {
+  -webkit-animation-delay: .2s;
+          animation-delay: .2s;
 }
 
-li{
-  float: left;
-} 
-
-li a{
-  display: block;
-  color: white;
-  padding: 14px 16px;
-  text-align: center;
+.saving span:nth-child(3) {
+  -webkit-animation-delay: .4s;
+          animation-delay: .4s;
 }
 
-li a:hover{
-  background-color: #777777;
+@-webkit-keyframes blink {
+  0% {
+    opacity: .2;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: .2;
+  }
+}
+
+@keyframes blink {
+  0% {
+    opacity: .2;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: .2;
+  }
+}
+
+.row{
+    max-height: 300px
 }
