--- a/swptest/src/app/login/login.component.html
+++ b/swptest/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <form>
   <div class="form-group">
     <label for="email">Emailadresse: </label>
@@ -9,3 +10,4 @@
   </div>
  <button type="submit" class="btn" routerLink="/dashboard"> Submit </button>
 </form>
+</div>
