--- a/test/css/styles2.css
+++ b/test/css/styles2.css
@@ -1,17 +1,15 @@
 
 .text{
-    display:flex;flex-direction:column; margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
+    display:flex;flex-direction:column; margin-top:0;margin-bottom:0;line-height: 13px;font-size: 12px;
 }   
-
-.text-l{
-    float:left;padding-right:10px;
-}        
+       
 .text-r{
-    float:right;padding-left:10px;color: white
+    float:right;color: white
 }
 
 .macro{
     margin:5px;border-radius:5px;padding:5px;display:flex;
+    max-width: 50%
 }
 .msj-rta{
     float:right;background:blue
@@ -27,7 +25,9 @@
     display:flex;
     flex-direction: column;
     padding-right: 10px;
-    padding-left: 10px
+    padding-left: 10px;
+    word-break: word-wrap;
+
 
 }
   
@@ -43,8 +43,23 @@ position: fixed;
 right: 2px;
 bottom: 0;
 background-color: #ffffff;
-z-index: 2}
+z-index: 2;
 
+}
+
+#chat-head{
+  height: 10%; 
+  background-color:lightseagreen;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px
+}
+
+#chat-foot{
+  height: 5%; 
+  background-color:lightseagreen;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px
+}
 
 .chat-message{
     height: 85%;
@@ -60,7 +75,7 @@ z-index: 2}
 }
 
 .saving span {
-  font-size: 50px;
+  font-size: 30px;
   -webkit-animation-name: blink;
           animation-name: blink;
   -webkit-animation-duration: 1.4s;
@@ -105,6 +120,6 @@ z-index: 2}
   }
 }
 
-.row{
-    max-height: 300px
+#optionsrow{
+    padding: inherit
 }
