--- a/test/css/styles2.css
+++ b/test/css/styles2.css
@@ -1,70 +1,72 @@
-
-.text{
-    display:flex;flex-direction:column; margin-top:0;margin-bottom:0;line-height: 13px;font-size: 12px;
-}   
-       
-.text-r{
-    float:right;color: white
-}
-
-.macro{
-    margin:5px;border-radius:5px;padding:5px;display:flex;
-    max-width: 50%
-}
-.msj-rta{
-    float:right;background:blue
-}
-.msj{
-    float:left;background:lightgrey;
-}
-
-#chatbox {
-    width:100%;
-    list-style-type: none;   
-    bottom:32px;
-    display:flex;
-    flex-direction: column;
-    padding-right: 10px;
-    padding-left: 10px;
-    word-break: word-wrap;
-
-
-}
-  
-.chat-container{
+#chat-container{
     margin-left: auto;
-margin-right: auto;
-height: 40%;
-width: 30%;
-border: 1px solid rgb(43, 113, 177);
-border-radius: 5px;
-max-height: 80%;
-position: fixed;
-right: 2px;
-bottom: 0;
-background-color: #ffffff;
-z-index: 2;
-
+    margin-right: auto;
+    height: 40%;
+    width: 30%;
+    border: 1px solid rgb(43, 113, 177);
+    border-radius: 5px;
+    max-height: 80%;
+    position: fixed;
+    right: 2px;
+    bottom: 0;
+    background-color: #ffffff;
+    z-index: 2;
 }
 
 #chat-head{
   height: 10%; 
   background-color:lightseagreen;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px
 }
+
+#chat-message{
+    height: 85%;
+    overflow-x: hidden;
+    overflow-y: auto
+}
+
+#chatbox {
+    display:flex;
+    flex-direction: column;
+    padding-right: 10px;
+    padding-left: 10px;
+    word-break: word-wrap;
+    list-style-type: none
+
+}
+
 
 #chat-foot{
   height: 5%; 
   background-color:lightseagreen;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px
 }
 
-.chat-message{
-    height: 85%;
-    overflow-x: hidden;
-    overflow-y: auto
+.chat-text{
+    line-height: 13px;
+    font-size: 12px;
+    margin:5px;
+    border-radius:5px;
+    padding:5px;
+    max-width: 70%
+}   
+
+
+.msj-rta{
+    float:right;
+    background:blue;
+    color: white
+}
+
+.msj{
+    float: left;
+    background:lightgrey;
+}
+
+.chat-row{
+    padding: inherit
 }
 
 
@@ -120,6 +122,3 @@ z-index: 2;
   }
 }
 
-#optionsrow{
-    padding: inherit
-}
