--- a/serverapi/forum/src/app/userdetail/userdetail.component.html
+++ b/serverapi/forum/src/app/userdetail/userdetail.component.html
@@ -20,15 +20,15 @@
     </tr>
     <tr>
       <td> {{'ADRESS'|translate}} </td>
-      <td> {{user.adress.street}}  {{user.adress.number}}</td>
+      <td> {{user.street}}  {{user.number}}</td>
     </tr>
     <tr>
       <td> {{'TOWN'|translate}} </td>
-      <td> {{user.adress.town}} ,{{user.adress.ZIP}} </td> 
+      <td> {{user.town}} ,{{user.ZIP}} </td> 
     </tr>
     <tr>
       <td> {{'COUNTRY'| translate}}</td>
-      <td> {{user.adress.country}}</td>
+      <td> {{user.country}}</td>
     </tr>
   </tbody>
 </table>
