--- a/swptest/src/app/footer/footer.component.html
+++ b/swptest/src/app/footer/footer.component.html
@@ -13,7 +13,7 @@
           [ngClass]="{ 'in': isIn }">
   <ul class="nav nav-justified">
       <li><a routerLink="/dashboard">Datas</a></li>
-      <li><a routerLink="/pokemons">Contact</a></li> 
+      <li><a routerLink="/contact">Contact</a></li> 
   </ul> 
     </div>
   </div> 
