--- a/swptest/src/app/app.component.html
+++ b/swptest/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-header></app-header>
-<h1>
-  {{title}}
-</h1>
+<app-header ></app-header>
+<p class="placholderhead"></p>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
