--- a/swptest/src/app/dashboard/dashboard.component.html
+++ b/swptest/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,13 @@
+<div class="container">
 <h1>Dashboard</h1>
 <div class="text-center">
 <ul style="list-style: none">
 <li><button class="btn">E-mail-Template</button>
 <button class="btn">Admin-Überblick</button></li>
-<li><button class="btn">Blacklist-Überlick</button>
-<button class="btn">Termin-Vorlage</button></li>
+<li><button class="btn" (click)="gotoBL()">Blacklist-Überlick</button>
+<button class="btn" (click)="gotoWSTemplist()">Termin-Vorlage</button></li>
 <li><button class="btn">Termin-Übersicht</button>
-<button class="btn">Einstellungen</button></li>
+<button class="btn" (click)="gotoSettings()">Einstellungen</button></li>
 </ul>
+</div>
 </div>
