--- a/swptest/src/app/workshoptemp/workshoptemp.component.html
+++ b/swptest/src/app/workshoptemp/workshoptemp.component.html
@@ -6,14 +6,19 @@
   <label>Description</label>
   <textarea class="form-control" rows="5"></textarea>
   <label>Cost</label>
-  <input class="form-control">
+  <input type="number" step="0.01" class="form-control">
   <label>Requierements</label>
   <input class="form-control">
   <label>Location</label>
   <input class="form-control">
   <label>Number Particaptions</label>
-  <input class="form-control">
+  <input type="number" class="form-control">
   <label>Duration</label>
   <input class="form-control">
   </div>
+  <div class="btn-group">
+  <button class="btn">Save</button>
+  <button class="btn">Discard</button>
+  </div>
+
 </div>
